--- a/public/CSS/Recipes.css
+++ b/public/CSS/Recipes.css
@@ -80,7 +80,7 @@
 
 @media (hover: none) {
     .card:hover {
-        transform: initial;
+        transform: none;
         box-shadow: 0 5px 8px rgba(0, 0, 0, 0.3);
     }
 }
