--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -13,6 +13,7 @@ body::-webkit-scrollbar {
 
 body {
     background-color: white;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
