--- a/public/CSS/footer.css
+++ b/public/CSS/footer.css
@@ -6,10 +6,8 @@
     text-align: left;
     border-radius: 2rem 2rem 0 0;
     width: 100%;
-    position: relative;
-    bottom: 0;
-    left: 0;
-    margin-top: 50px;
+    margin-top: auto;
+    flex-shrink: 0;
 }
 
 .footer-container {
