--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -6,16 +6,26 @@
     font-family: "Plus Jakarta Sans", sans-serif;
 }
 
-body::-webkit-scrollbar {
-    display: none;
-    /* For Chrome, Safari, and WebKit-based browsers */
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    background-color: white;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
+    background-color: white;
+}
+
+main {
+    flex: 1 0 auto;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+    /* For Chrome, Safari, and WebKit-based browsers */
 }
 
 button {
