--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -70,3 +70,19 @@ button:active {
         background-color: #c9552b;
     }
 }
+
+/* Auto show animation */
+.autoShow{
+    animation: autoShow both;
+    animation-timeline: view(70% 10%);
+}
+@keyframes autoShow {
+    from{
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
