--- a/public/CSS/footer.css
+++ b/public/CSS/footer.css
@@ -6,7 +6,7 @@
     text-align: left;
     border-radius: 2rem 2rem 0 0;
     width: 100%;
-    margin-top: auto;
+    margin-top: 50px;
     flex-shrink: 0;
 }
 
