--- a/public/CSS/Recipes.css
+++ b/public/CSS/Recipes.css
@@ -22,7 +22,7 @@
     border-radius: 15px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    transition: all 0.3s ease;
+    transition: all 0.3s cubic-bezier(.45,-0.93,.55,1.51);
     padding-bottom: 5px;
     display: flex;
     flex-direction: column;
@@ -32,7 +32,7 @@
 /* Card Hover Effect */
 .card:hover {
     box-shadow: 0 15px 48px rgba(0, 0, 0, 0.1);
-    transform: translateY(-10px);
+    transform: translateY(-15px);
 }
 
 /* Card Image */
