--- a/public/CSS/authentication-css/authentication.css
+++ b/public/CSS/authentication-css/authentication.css
@@ -7,10 +7,11 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    padding: 0;
 }
 
 .auth-container {
-    width: 90%; /* Use percentage for responsiveness */
+    width: 70%; /* Use percentage for responsiveness */
     max-width: 400px; /* Maximum width for larger screens */
     background: white;
     border-radius: 8px;
@@ -20,6 +21,7 @@ body {
 
 h2 {
     text-align: center;
+    font-size: clamp(1.2rem, 2vw, 3rem);
 }
 
 form {
@@ -35,12 +37,14 @@ input {
 }
 
 button {
+    margin: 10px 0;
     padding: 10px;
     background-color: #4CAF50;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-size: clamp(0.8rem, 0.55rem + 0.8vw, 1rem);
 }
 
 button:hover {
