--- a/views/authentication.ejs
+++ b/views/authentication.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Recipe Haven: Log In or Sign Up</title>
 
+    <link rel="icon" href="/Images/logo.jpg" type="image/png">
+
     <!--FontAwesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -24,8 +26,8 @@
             <div class="fade-in" id="login-form">
                 <h2>Login</h2>
                 <form action="/login" method="POST">
-                    <input type="email" name="email" placeholder="Email" required>
-                    <input type="password" name="password" placeholder="Password" required>
+                    <input type="text" name="username" placeholder="New Username" required>
+                    <input type="password" name="password" placeholder="New Password" required>
                     <button type="submit">Login</button>
                 </form>
                 <p>New around the kitchen? <span id="switch-to-signup">Sign Up</span></p>
@@ -36,7 +38,6 @@
                 <h2>Sign Up</h2>
                 <form action="/signup" method="POST">
                     <input type="text" name="username" placeholder="Username" required>
-                    <input type="email" name="email" placeholder="Email" required>
                     <input type="password" name="password" placeholder="Password" required>
                     <button type="submit">Sign Up</button>
                 </form>
