--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,9 @@
 	</header>
 
 	<main>
-		<%- include(template) %>
+		<div class="main">
+			<%- include(template) %>
+		</div>
 	</main>
 
 	<footer class="footer">
