--- a/views/authentication.ejs
+++ b/views/authentication.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join Recipe Haven: Log In or Sign Up</title>
+    <title>Join Recipe Haven - <%= title %></title>
 
     <link rel="icon" href="/Images/logo.jpg" type="image/png">
 
@@ -11,41 +12,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- Jakarta Font -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
-		rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+        rel="stylesheet">
 
     <!-- CSS -->
     <link rel="stylesheet" href="/CSS/authentication-css/authentication.css">
 </head>
+
 <body>
     <div class="auth-container">
         <div class="form-container">
-            <!--Login Page-->
-            <div class="fade-in" id="login-form">
-                <h2>Login</h2>
-                <form action="/login" method="POST">
-                    <input type="text" name="username" placeholder="New Username" required>
-                    <input type="password" name="password" placeholder="New Password" required>
-                    <button type="submit">Login</button>
-                </form>
-                <p>New around the kitchen? <span id="switch-to-signup">Sign Up</span></p>
-            </div>
-
-            <!--Signup Page-->
-            <div class="fade-in" id="signup-form" style="display: none;">
-                <h2>Sign Up</h2>
-                <form action="/signup" method="POST">
-                    <input type="text" name="username" placeholder="Username" required>
-                    <input type="password" name="password" placeholder="Password" required>
-                    <button type="submit">Sign Up</button>
-                </form>
-                <p>Already a chef? <span id="switch-to-login">Login</span></p>
-            </div>
+            <%- include(template) %>
         </div>
     </div>
 
     <script type="module" src="/JS/authentication-js/authentication.js"></script>
 </body>
+
 </html>
