--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,10 +50,10 @@
 					<div class="user-profile"><img src="/Images/profile.jpg" alt="user-profile"></div>
 					<div class="user-name"><p><%= username %></p><i class="fa-solid fa-chevron-down fa-lg"></i></div>
 					<ul class="user-links">
-						<li><a href="?=profile"></a></li>
-						<li><a href="?=settings"></a></li>
-						<li><a href="?=posts"></a></li>
-						<li><a href="?=signout"></a></li>
+						<li><a href="?=profile">Profile</a></li>
+						<li><a href="?=settings">Settings</a></li>
+						<li><a href="?=posts">Your Posts</a></li>
+						<li><a href="/signout" >Sign Out</a></li>
 					</ul>
 				<% } else { %>
 					<div class="header-btn">
