--- a/public/CSS/index-css/header.css
+++ b/public/CSS/index-css/header.css
@@ -93,18 +93,19 @@
         position: absolute;
         top: 74px;
         right: 0;
-        height: 60vh;
+        height: 40vh;
         width: 180px;
         border-bottom-left-radius: 2rem;
         background-color: white;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
         opacity: 0;
         pointer-events: none;
         transition: all 0.3s ease;
-        gap: 40px;
+        padding: 20px 0;
         z-index: 10;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
 
     .nav-links li:hover {
@@ -130,9 +131,9 @@
         display: none;
     }
 
-    .nav-links {
+    /* .nav-links {
         height: 40vh;
-    }
+    } */
 }
 
 @media (max-width: 300px){
@@ -172,4 +173,40 @@
     width: 100%;
     object-fit: cover;
     border-radius: 100px;
+}
+
+.user-links{
+    display: flex;
+    list-style: none;
+    position: absolute;
+    top: 78px;
+    right: 15px;
+    height: 30vh;
+    width: 180px;
+    border-radius: 1rem;
+    background-color: white;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+    z-index: 10;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.user-links li a{
+    color: black;
+    text-decoration: none;
+    font-size: clamp(0.875rem, 0.5625rem + 1vw, 1.125rem);
+    transition: all 0.2s ease;
+}
+
+.user-links li a:hover{
+    color: #ff6347;
+}
+
+.active{
+    opacity: 1;
+    pointer-events: all;
 }
