Banner issues fixed.

--- a/views/index-template/profile.ejs
+++ b/views/index-template/profile.ejs
@@ -4,7 +4,7 @@
     <form class="banner" id="banner" action="/upload-banner" method="POST" enctype="multipart/form-data">
         <input type="file" id="uploadBanner"  name="bannerPhoto">
         <label for="uploadBanner" class="upload-area" id="uploadArea">
-            <div class="upload-banner" id="uploadBanner"></div>
+            <div class="upload-banner" id="bannerUpload"></div>
         </label>
     </form>
 
@@ -21,10 +21,10 @@
 
         <!-- Food Preferences -->
         <div class="food-tags">
-            <span class="tag">Italian</span>
-            <span class="tag">Desserts</span>
-            <span class="tag">Vegan</span>
-            <span class="tag">Asian</span>
+            <span>Italian</span>
+            <span>Desserts</span>
+            <span>Vegan</span>
+            <span>Asian</span>
         </div>
     </div>
 
