--- a/public/CSS/userProfile-css/profile.css
+++ b/public/CSS/userProfile-css/profile.css
@@ -25,13 +25,15 @@
     width: 100%;
     height: 100%;
     cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .upload-area .upload-banner {
-    color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
     font-size: clamp(0.875rem, 0.5625rem + 1vw, 1.125rem);
     font-weight: bold;
     font-family: Arial, sans-serif;
@@ -85,8 +87,8 @@
 .food-tags {
     margin-top: 10px;
 }
-.tag {
-    background: coral;
+.food-tags span{
+    background: #cd3a00;
     color: white;
     padding: 5px 10px;
     margin: 5px;
