--- a/views/index-template/profile.ejs
+++ b/views/index-template/profile.ejs
@@ -1,21 +1,31 @@
 <!-- Profile Container -->
 <div class="profile-container">
     <!-- Banner -->
-    <form class="banner" id="banner" action="/upload-banner" method="POST" enctype="multipart/form-data">
-        <input type="file" id="uploadBanner"  name="bannerPhoto">
-        <label for="uploadBanner" class="upload-area" id="uploadArea">
-            <div class="upload-banner" id="bannerUpload"></div>
-        </label>
-    </form>
+     <div class="bannerPic">
+        <form method="POST" id="deleteBannerBtn" class="delete-btn delete-banner" action="/remove-photo">
+            <button type="submit"><i class="fa-regular fa-trash-can fa-xs"></i></button>
+        </form>
+        <form class="banner" id="banner" action="/upload-banner" method="POST" enctype="multipart/form-data">
+            <input type="file" id="uploadBanner"  name="bannerPhoto">
+            <label for="uploadBanner" class="upload-area" id="uploadArea">
+                <div class="upload-banner" id="bannerUpload"></div>
+            </label>
+        </form>
+     </div>
 
     <!-- User Info Section -->
     <div class="user-info">
-        <form class="profile-pic" action="/upload-profile" method="POST" enctype="multipart/form-data">
-            <label for="profileUpload">
-                <div class="profile-icon" id="profileIcon"></div>
-            </label>
-            <input type="file" id="profileUpload" name="profilePhoto" style="display: none;">
-        </form>
+        <div class="userPic">
+            <form method="POST" id="deletePicBtn" class="delete-btn delete-profile-pic" action="/remove-photo">
+                <button type="submit"><i class="fa-regular fa-trash-can fa-xs"></i></button>
+            </form>
+            <form class="profile-pic" action="/upload-profile" method="POST" enctype="multipart/form-data">
+                <label for="profileUpload">
+                    <div class="profile-icon" id="profileIcon"></div>
+                </label>
+                <input type="file" id="profileUpload" name="profilePhoto" style="display: none;">
+            </form>
+        </div>
         <h2 class="username"><%= user.username %></h2>
         <p class="bio">Food Enthusiast | Loves Cooking</p>
 
