--- a/public/CSS/userProfile-css/profile.css
+++ b/public/CSS/userProfile-css/profile.css
@@ -15,7 +15,7 @@
 /* Banner */
 .banner {
     width: 100%;
-    height: 200px;
+    height: 25dvh;
     border-radius: 10px;
 }
 .banner input {
@@ -25,11 +25,13 @@
     width: 100%;
     height: 100%;
     cursor: pointer;
+    border-radius: 10px;
 }
 
 .upload-area .upload-banner {
     width: 100%;
     height: 100%;
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -79,14 +81,26 @@
 .username {
     font-size: 22px;
 }
-.bio {
+
+.bio{
+    border: none;
     color: gray;
+    resize: none;
+    height: auto;
+    width: 50dvw;
+    padding: 10px 5px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.bio:focus{
+    outline: none;
+    border: none;
 }
 
 /* Food Tags */
-.food-tags {
-    margin-top: 10px;
-}
 .food-tags span{
     background: #cd3a00;
     color: white;
@@ -133,6 +147,9 @@
 
 /* Responsive */
 @media (max-width: 600px) {
+    .banner{
+        height: 15dvh;
+    }
     .profile-pic img {
         width: 80px;
         height: 80px;
