removing tags from profile

--- a/views/index-template/profile.ejs
+++ b/views/index-template/profile.ejs
@@ -32,19 +32,11 @@
         </h2>
         <!-- bio -->
         <textarea id="profileBio" class="bio" spellcheck="false" name="bio" placeholder="Write your bio..."><%= user.bio %></textarea>
-
-        <!-- Food Preferences -->
-        <div class="food-tags">
-            <span>Italian</span>
-            <span>Desserts</span>
-            <span>Vegan</span>
-            <span>Asian</span>
-        </div>
     </div>
 
     <!-- User Posts -->
     <div class="user-posts">
-        <h3 style="margin: 16px;">My Recipes</h3>
+        <h3 style="margin: 16px; margin-top: 0;">My Recipes</h3>
         <section class="recipe-cards">
             <div class="card">
                 <img loading="lazy" src="/Images/pasta.jpg" alt="Pasta Recipe">
