--- a/public/CSS/userProfile-css/profile.css
+++ b/public/CSS/userProfile-css/profile.css
@@ -12,44 +12,13 @@
     gap: 20px;
 }
 
-/* Banner */
-.banner {
-    width: 100%;
-    height: 25dvh;
-    border-radius: 10px;
-}
-.banner input {
-    display: none;
-}
-.upload-area {
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    border-radius: 10px;
-}
-
-.upload-area .upload-banner {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    font-size: clamp(0.875rem, 0.5625rem + 1vw, 1.125rem);
-    font-weight: bold;
-    font-family: Arial, sans-serif;
-    cursor: pointer;
-    background-size: cover;
-    background-position: center;
-}
-
 .user-info{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 8px;
+    margin-top: 20px;
 }
 /* Profile Picture */
 .profile-pic {
@@ -105,12 +74,10 @@
     position: relative;
 }
 
-.bannerPic{
-    position: relative;
-}
-
 .delete-btn{
     position: absolute;
+    top: 0;
+    right: 0;
 }
 
 .delete-btn button{
@@ -125,27 +92,10 @@
     align-items: center;
 }
 
-.delete-banner{
-    top: 5px;
-    right: 5px;
-}
-
-.delete-profile-pic{
-    top: 0;
-    right: 0;
-}
-
 /* Responsive */
 @media (max-width: 600px) {
-    .banner{
-        height: 15dvh;
-    }
     .profile-pic img {
         width: 80px;
         height: 80px;
-    }
-    .tag {
-        font-size: 12px;
-        padding: 3px 8px;
     }
 }
